--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
     font-size: 50px;
     text-decoration: dotted;
     background: linear-gradient(to right, hsl(98 100% 62%), hsl(204 100% 59%));
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-align: center;
