--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,35 @@ body {
     -webkit-text-fill-color: transparent;
     text-align: center;
 }
+#game-header-end-round {
+    font-family: cursive;
+    position: absolute;
+    font-weight: 900;
+    margin-top: 20vh;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    font-size: 50px;
+    text-decoration: dotted;
+    background: linear-gradient(to right, hsl(98 100% 62%), hsl(204 100% 59%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: center;
+}
+.close-icon {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    font-size: 40px;
+}
+.next-icon {
+    position: absolute;
+    right: 1rem;
+    bottom: 1rem;
+    font-size: 40px;
+}
 .start-screen {
     background-image: url('start.jpg');
 }
@@ -38,7 +67,22 @@ body {
 }
 .game_container {
     background-image: url('start.jpg');
-
+    overflow: hidden;
+    background-color: hsl(240, 3%, 7%);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: white;
+    min-height: 100vh;
+    width: 100vw;
+    max-width: 600px;
+    margin: auto;
+    position: relative;
+    font-size: clamp(0.5rem, 2.5vmin, 1.5rem);
+}
+.game_container-2 {
+    visibility: hidden;
+    background-image: url('start.jpg');
     overflow: hidden;
     background-color: hsl(240, 3%, 7%);
     display: flex;
@@ -71,14 +115,14 @@ body {
 #popup3 span {
     font-size: 30px;
 }
-#popup1 {
+#popup2 {
     padding: 50px;
     font-size: 0.6rem;
     line-height: 0.8rem;
     text-align: center;
 }
-.info-popup.show {
-    visibility: visible;
+.show {
+    visibility: visible !important;
     -webkit-animation: fadeIn 1s;
     animation: fadeIn 1s;
 }
@@ -175,14 +219,23 @@ body {
     display: grid;
     justify-content: center;
     align-content: center;
-    flex-grow: 1;
-    grid-template-columns: repeat(5, 4em);
-    grid-template-rows: repeat(6, 4em);
-    gap: 0.25em;
+    flex-grow: 10;
+    grid-template-columns: repeat(5, 4rem);
+    grid-template-rows: repeat(6, 4rem);
+    gap: 0.25rem;
     margin-bottom: 1em;
 }
-#round-label {
+.round-label {
     position: relative;
+    font-size: 2.5rem;
+}
+.end-round-screen {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: #485461;
+    background-image: url('start.jpg');
 }
 #info {
     z-index: 2;
