--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,14 @@ body {
     margin: auto;
     width: 200px;
 }
+@media only screen and (max-width: 600px) {
+    .game_container {
+        overflow: scroll !important;
+    }
+    .game_container-2 {
+        overflow: scroll !important;
+    }
+}
 .game_container {
     background-image: url('start.jpg');
     overflow: hidden;
